# rust-protobuf-chars-bug

./: Cargo.toml  build.rs
proto/: user.proto
src/: main.rs  user.rs
